# simpleNote

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  NGINX_SSL_FIX_SUMMARY.md  README.md  SECRETS.md  analysis-2.md  analysis.md  deploy-low-memory-project1.sh  deploy-simplenote.sh  docker-compose.dev.yml  docker-compose.yml  encryption-notes.md  feature_flags.json  main.jsx  new-plan.md  new-review-2.md  new-review.md  nginx.conf  package.json  podman-compose.yml  reexplore-plan.md  review-2.md  stage-3.md  start-dev.sh  stop-dev.sh  update-ec2-ip.sh  verify-setup.sh  wait-for-db.sh
agent-workflow-service/: .env.example  Dockerfile  README.md  a.txt  podman-compose.yml  requirements.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-entrypoint.sh  requirements.txt
backend_flask/: app.py  app_auth.py  app_with_auth.py  migrate_user_id.sql  requirements.txt
docs/: AGENT-WORKFLOW.md  ARCHITECTURE.md  CONCEPTS.md  DOCUMENTATION.md  TECHNICAL_DOCUMENTATION.md  the-agent-loop-problem.md
frontend/: .dockerignore  .gitignore  (+8 more)
v2/notelite_inference/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  setup_llama.sh
v2/notelite_inference/include/: model_loader.h  register_routes.h  run_inference.h  sampling_config.h  service_config.h
v2/notelite_inference/routes/: register_routes.cpp
v2/notelite_inference/src/: main.cpp  model_loader.cpp  run_inference.cpp  service_config.cpp  splunk_dashboard_grammar.gbnf  splunk_dashboard_grammar.json
(+695 files in other folders)
